--- a/css/servicios/blog.css
+++ b/css/servicios/blog.css
@@ -50,10 +50,17 @@
     box-shadow: 0 6px 12px rgba(28, 31, 61, 0.3); /* sombra azul GISEA */
 }
 
+.featured-card-image{
+    width: 100%;
+    height: 200px;
+    overflow: hidden; /* Evita que contenido excedente afecte */
+}
+
 .featured-card-image img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    display: block;
 }
 
 .featured-card-body {
@@ -222,4 +229,73 @@
         font-size: 1rem;
         padding: 6px 14px;
     }
+}
+
+/*** ESTILOS PAGINACION **/
+
+.custom-pagination .page-link {
+    font-family: "Oswald", sans-serif;
+    color: #1C1F3D;
+    padding: 8px 16px;
+    margin: 0 4px;
+    border-radius: 8px;
+    border: 1px solid #1C1F3D;
+    transition: all 0.3s ease-in-out;
+}
+
+.custom-pagination .page-link:hover {
+    background-color: #1C1F3D;
+    color: white;
+}
+
+.custom-pagination .active .page-link {
+    background-color: #1C1F3D;
+    color: white;
+    border-color: #1C1F3D;
+}
+
+.custom-pagination .disabled .page-link {
+    color: #aaa;
+    background-color: #f0f0f0;
+    border-color: #ccc;
+    cursor: not-allowed;
+}
+
+/***** EFECTO PARA CAMBIO DE CARDS DE BLOG *****/
+.blog-card-item {
+    opacity: 1;
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+}
+
+/* Fade out */
+.fade-out-left {
+    opacity: 0;
+    transform: translateX(-30px);
+}
+
+.fade-out-right {
+    opacity: 0;
+    transform: translateX(30px);
+}
+
+/* Fade in */
+.fade-in-left {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.fade-in-right {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+/* Estado inicial para entradas */
+.hidden-left {
+    opacity: 0;
+    transform: translateX(30px);
+}
+
+.hidden-right {
+    opacity: 0;
+    transform: translateX(-30px);
 }
